Created events model Comments on usermodel + some fixes

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,11 @@
 <%- include('partials/header') %>
 
-<h2>Employees</h2>
-<a href="/employees">Show employees</a>
+<h2>Event Manager</h2>
+
+<a href="/signup">Sign Up</a>
+
+<a href="/events/create">Create an Event</a>
+<a href="/events">View Events (Not done yet)</a>
 
 <%- include('partials/footer') %>
 
