Events Manager Created
I have created the table to display the events in the home page as well in a view page. I have implemented the edit and delete options for the events.

--- a/views/eventCreate.ejs
+++ b/views/eventCreate.ejs
@@ -1,15 +1,20 @@
 <%- include('partials/header') %>
 
+<%- include('partials/nav_bar') %>
+<main class="container">
 <h2>Create Event</h2>
-<form action="/events/create">
-    <input type="text" name="name" required />
-    <div class="name error"></div>
-    <input type="text" name="price" required />
-    <div class="price error"></div>
-    <input type="text" name="description" required />
-    <div class="description error"></div>
-    <button>Create event</button>
-</form>
+    <form action="/events/create">
+        <input type="text" name="name" required />
+        <div class="name error"></div>
+        <input type="text" name="price" required />
+        <div class="price error"></div>
+        <input type="text" name="description" required />
+        <div class="description error"></div>
+        <button>Create event</button>
+    </form>
+
+    <h1 id="eventCreationConfirmation"></h1>
+</main>
 
 <script>
     const form = document.querySelector('form');
@@ -29,13 +34,13 @@
             }
         });
         const data = await res.json();
+
+        document.getElementById('eventCreationConfirmation').innerHTML = "Event created successfully";
         console.log(data);
     } catch(ex) {
-        console.error("folloing error occured: ", ex);
+        console.error("following error occured: ", ex);
     }
-    });
-
-    
+    });  
 </script>
 
 <%- include('partials/footer') %>
