--- a/views/partials/nav_bar.ejs
+++ b/views/partials/nav_bar.ejs
@@ -1,14 +1,21 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">
-        <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
-    </a>
-    <div class="collapse navbar-collapse">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/">Home</a>
-        <a class="nav-item nav-link" href="/signup">Sign Up</a>
-        <a class="nav-item nav-link" href="/login">Log In</a>
-        <a class="nav-item nav-link" href="/events/create">Create Event</a>
-        <a class="nav-item nav-link" href="/events/view">View Event</a>
-      </div>
-    </div>
-  </nav>
+<nav class="navbar navbar-expand-lg  main-nav " id="navbar">
+	<div class="container">
+	  <a class="navbar-brand" href="/">
+	  	<img src="images/logo.png" alt="" class="img-fluid">
+	  </a>
+
+	  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="ti-align-justify"></span>
+	  </button>
+
+              <div class="collapse navbar-collapse" id="navbarsExample09">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item  active"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/events/create">Create Event</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/events/view">View Event</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/signup">Sign Up</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
+                </ul>
+            </div>
+            
+</nav>
