--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,15 +2,17 @@
 
 <%- include('partials/nav_bar') %>
 
-<main class="container">
-    <h1>Sign Up</h1>
-    <form action="/signup" method="post" id="signup-form">
-        <input type="email" name="email" placeholder="Email" required />
-        <div class="email error"></div>
-        <input type="password" name="password" placeholder="Password" required />
-        <div class="password error"></div>
-        <button type="submit">Sign up</button>
-    </form>
+<main class="form-signin w-100 m-auto">
+    <div class="container">
+        <h1>Sign Up</h1>
+        <form action="/signup" method="post" id="signup-form">
+            <input type="email" name="email" placeholder="Email" required />
+            <div class="email error"></div>
+            <input type="password" name="password" placeholder="Password" required />
+            <div class="password error"></div>
+            <button type="submit">Sign up</button>
+        </form>
+    </div>
 </main>
 
 <script>
