Login Page, CreateEvent, SignUp

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,18 +1,45 @@
-<!-- views/login.ejs -->
 <%- include('partials/header') %>
+    <%- include('partials/nav_bar') %>
 
-<%- include('partials/nav_bar') %>
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Signup Form</title>
+            <link rel="stylesheet" type="text/css" href="/css/login.css">
+        </head>
 
-<main class="container">
-    <h1>Login</h1>
-    <form action="/login" method="post">
-        <input type="text" name="email" placeholder="Email" required />
-        <div class="email error"></div>
-        <input type="password" name="password" placeholder="Password" required />
-        <div class="password error"></div>
-        <button type="submit">Login</button>
-    </form>
-</main>
+        <body>
+            <div class="content">
+                <div class="wMessage-container">
+                    <div class="wMessage">Welcome to Gathergrid!</div>
+                    <p>Redefining Entertainment, One Event at a Time: Join the Celebration Revolution with GatherGrid,
+                        Your Passport to Unleashing Joy, Creativity, and Endless Memories</p>
+                </div>
+                <div class="card">
+                    <main class="container">
+                        <h2>log in with your account</h2>
+                        <form action="/login" method="post">
+                            <div class="txt_field">
+                                <input type="text" name="email" required />
+                                <label>Email</label>
+                            </div>
+                            <div class="email error"></div> 
+                            <div class="txt_field">
+                                <input type="password" name="password" required />
+                                <label>Password</label>
+                            </div>
+                            <div class="password error"></div> 
+                            <button type="submit">Login</button>
 
+                            <div class="legends">
+                                <div><a href="/signup">Don't have an account?</a></div>
+                                <div><a href="/forgot-password">Forgot password?</a></div>
+                            </div>
+                        </form>
+                    </main>
+                    <img src="/images/girl.jpg" alt="card">
+                </div>
+            </div>
+        </body>
 
-<%- include('partials/footer') %>
+        <%- include('partials/footer') %>
