--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,7 +1,11 @@
 <%- include('partials/header') %>
 
 <%- include('partials/nav_bar') %>
-<body>
+
+
+  <!-- Signup Stylesheet -->
+  <link rel="stylesheet" href="/css/signup-style.css">
+
     <form action="/signup" method="post" id="signup-form" class="body-form">
         <div class="container">
             <h1 style="margin-bottom: 10%; margin-top: 10%;">Create an account</h1>
@@ -44,8 +48,6 @@
             <hr>
         </div>
     </form>
-
-</body>
 
 <script>
     const form = document.getElementById('signup-form');
