--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,14 +1,8 @@
 <%- include('partials/header') %>
     <%- include('partials/nav_bar') %>
 
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Signup Form</title>
-            <link rel="stylesheet" type="text/css" href="/css/login.css">
-        </head>
-
-        <body>
+     <!-- Login Stylesheet -->
+    <link rel="stylesheet" href="/css/login.css">
             <div class="content">
                 <div class="wMessage-container">
                     <div class="wMessage">Welcome to Gathergrid!</div>
@@ -40,6 +34,4 @@
                     <img src="/images/girl.jpg" alt="card">
                 </div>
             </div>
-        </body>
-
         <%- include('partials/footer') %>
