--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,8 +20,7 @@
   <link rel="stylesheet" href="/plugins/owl-carousel/owl.theme.default.min.css">
   <link rel="stylesheet" href="/plugins/magnific-popup/magnific-popup.css">
   <link rel="stylesheet" href="/plugins/animated-text/animated-text.css">
+  <link rel="stylesheet" href="style.css">
 
-  <!-- Main Stylesheet -->
-  <link href="/css/style.css" rel="stylesheet">
 </head>
 <body>
