Update create event

--- a/views/eventCreate.ejs
+++ b/views/eventCreate.ejs
@@ -39,6 +39,17 @@
                             <div class="error" id="description-error"></div>
                         </div>
 
+                        <div class="form-group">
+                            <label for="category">Event Category:</label>
+                            <select id="category" name="category" required>
+                                <option value="" disabled selected>Select event category</option>
+                                <option value="concerts">Concerts</option>
+                                <option value="parties">Parties</option>
+                                <option value="socials">Socials</option>
+                                <option value="food">Food</option>
+                            </select>
+                            <div class="error" id="category-error"></div>
+                        </div>                        
 
                         <div class="form-group">
                             <label for="address">Address:</label>
