Error Views, Navbar & Style Fixes
- Error view created for invalid req/res
- Nav bar division for User, not User & Organization
- General Style Fixes

--- a/views/eventView.ejs
+++ b/views/eventView.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') %>
 
-<%- include('partials/nav_bar') %>
+<%- include('partials/nav_bar_user') %>
 
 <main class="container">
     <h2>View Events</h2>
