--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') %>
 
-<%- include('partials/nav_bar') %>
+<%- include('partials/nav_bar_org') %>
 
 <div class="container">
     <img src="/images/banner.png" alt="Banner Image" class="img-fluid">
@@ -27,10 +27,6 @@
     </div>
 </section>
 <!-- Banner End -->
-
-
-<%- include('partials/carousel') %>
-
 
 <!-- Service start -->
 <section class="section service-home border-top">
@@ -69,6 +65,7 @@
 </section>
 <!-- service end -->
 
+<%- include('partials/carousel') %>
 
 <%- include('partials/footer') %>
 
