--- a/views/partials/carousel.ejs
+++ b/views/partials/carousel.ejs
@@ -1,7 +1,3 @@
-
-
-
-
 <!-- Carousel start -->
 <section class="portfolio ">
 	<div class="container">
@@ -43,7 +39,7 @@
 	               <img src="images/events/1.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
 	                <div class="overlay-box">
 	                  <div class="overlay-inner">
-	                    <a class="overlay-content" href="/event1">
+	                    <a class="overlay-content" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/event1">
 	                      <h5 class="mb-0">Mike Rita</h5>
 	                      <p>December 8</p>
 	                    </a>
@@ -59,7 +55,7 @@
 	               <img src="images/events/2.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
 	                <div class="overlay-box">
 	                  <div class="overlay-inner">
-		                    <a class="overlay-content" href="/event2">
+		                    <a class="overlay-content" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/event2">
 		                      <h5 class="mb-0">Taylor Swift</h5>
 		                      <p>December 9</p>
 		                    </a>
@@ -75,7 +71,7 @@
 	               <img src="images/events/3.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
 	                <div class="overlay-box">
 	                  <div class="overlay-inner">
-	                    <a class="overlay-content" href="/event3">
+	                    <a class="overlay-content" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/event3">
 	                      <h5 class="mb-0">Food Fest</h5>
 	                      <p>December 10</p>
 	                    </a>
@@ -91,7 +87,7 @@
 	               <img src="images/events/4.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
 	                <div class="overlay-box">
 	                  <div class="overlay-inner">
-	                    <a class="overlay-content" href="/event4">
+	                    <a class="overlay-content" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/event4">
 	                      <h5 class="mb-0">K-POP in your area</h5>
 	                      <p>December 11</p>
 	                    </a>
@@ -107,7 +103,7 @@
 	               <img src="images/events/5.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
 	                <div class="overlay-box">
 	                  <div class="overlay-inner">
-	                    <a class="overlay-content" href="/event5">
+	                    <a class="overlay-content" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/event5">
 	                       <h5 class="mb-0 ">COMICCON</h5>
 	                      	<p>December 12</p>
 	                    </a>
@@ -123,7 +119,7 @@
 	               <img src="images/events/6.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
 	                <div class="overlay-box">
 	                  <div class="overlay-inner">
-	                    <a class="overlay-content" href="/event6">
+	                    <a class="overlay-content" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/event6">
 	                       <h5 class="mb-0">Jokoy</h5>
 	                      	<p>December 13</p>
 	                    </a>
