--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,34 +1,34 @@
 </body>
 <!-- Footer Start -->
-<footer class="footer">
+<footer class="footer mt-5 p-5 text-white" style="background-color: black;">
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
-                <p class="mb-0">Copyrights© Web App Group
-                    <a href="/" class="text-white" target="_blank">Gather Grid</a>
+                <p class="mb-0"><i>Copyrights©</i>
+                    <a href="/" style="color: rgb(255, 77, 0)" target="_blank">Gathergrid</a>
                 </p>
             </div>
             <div class="col-lg-6">
                 <div class="widget footer-widget text-lg-right mt-5 mt-lg-0">
                     <ul class="list-inline mb-0">
                         <li class="list-inline-item">
-                            <a href="https://www.facebook.com" target="_blank">
+                            <a href="https://www.facebook.com" style="color: rgb(255, 77, 0)" target="_blank">
                                 <i class="ti-facebook mr-3"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://twitter.com/home" target="_blank">
+                            <a href="https://twitter.com" style="color: rgb(255, 77, 0)" target="_blank"> 
                                 <i class="ti-twitter mr-3"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://github.com/JxRiera/eventmanager" target="_blank">
+                            <a href="https://github.com" style="color: rgb(255, 77, 0)" target="_blank">
                                 <i class="ti-github mr-3"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://www.pinterest.ca/" target="_blank">
-                                <i class="ti-pinterest mr-3"></i>
+                            <a href="https://www.pinterest.ca/" style="color: rgb(255, 77, 0)" target="_blank">
+                                <i class="ti-pinterest mr-3 "></i>
                             </a>
                         </li>
                     </ul>
@@ -51,10 +51,6 @@
 <script src="/plugins/counto/apear.js"></script>
 <script src="/plugins/counto/counTo.js"></script>
 <script src="/plugins/bootstrap/modal.min.js"></script>   <!-- modal logic -->
-
-<!-- Google Map -->
-<script src="/plugins/google-map/map.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"></script> 
 
 <!-- Main Script -->
 <script src="/js/script.js"></script>
