--- a/views/partials/nav_bar_org.ejs
+++ b/views/partials/nav_bar_org.ejs
@@ -12,8 +12,10 @@
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="navbar-nav ml-auto">
           <li class="nav-item  active"><a class="nav-link" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/">Home</a></li>
-          <li class="nav-item"><a class="nav-link" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/signup">Sign Up</a></li>
-          <li class="nav-item"><a class="nav-link" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/login">Log In</a></li>
+          <li class="nav-item"><a class="nav-link" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/events/create">Create Event</a></li>
+          <li class="nav-item"><a class="nav-link" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/events/view">Edit Event</a></li>
+          <li class="nav-item"><a class="nav-link" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/profile">Profile</a></li>
+          <li class="nav-item"><a class="nav-link" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/">Logout</a></li>
       </ul>
     </div>      
   </div>       
