--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,8 +1,5 @@
 <%- include('partials/header') %>
 
-<%- include('partials/nav_bar') %>
-
-
   <!-- Signup Stylesheet -->
   <link rel="stylesheet" href="/css/signup-style.css">
 
@@ -42,7 +39,7 @@
             </div>
 
             <div class="signin">
-                <p>Already have a Gathergrid account? <a href="/login">Sign in</a>.</p>
+                <p>Already have a Gathergrid account? <a href="/login">Log in</a>.</p>
             </div>
 
             <hr>
@@ -81,7 +78,4 @@
         }
     });
 </script>
-
-<%- include('partials/footer') %>
-
 </html>
