--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>gathergrid</title>
+  <title>Gathergrid</title>
 
   <!-- Mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,6 @@
   <meta name="theme-name" content="thomson" />
   
   <!-- Plugins Needed for the Project -->
-  <!-- Bootstrap -->
   <link rel="stylesheet" href="/plugins/bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="/plugins/themify/css/themify-icons.css">
   <link rel="stylesheet" href="/plugins/counto/animate.css">
@@ -21,6 +20,9 @@
   <link rel="stylesheet" href="/plugins/magnific-popup/magnific-popup.css">
   <link rel="stylesheet" href="/plugins/animated-text/animated-text.css">
   <link rel="stylesheet" href="style.css">
+
+  <!-- Icon -->
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png">
 
 </head>
 <body>
