--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,33 +1,33 @@
 </body>
 <!-- Footer Start -->
-<footer class="footer mt-5 p-5 text-white" style="background-color: black;">
+<footer class="footer mt-5 p-5">
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
                 <p class="mb-0"><i>Copyrights©</i>
-                    <a href="/" style="color: rgb(255, 77, 0)" target="_blank">Gathergrid</a>
+                    <a href="/" target="_blank">Gathergrid</a>
                 </p>
             </div>
             <div class="col-lg-6">
                 <div class="widget footer-widget text-lg-right mt-5 mt-lg-0">
                     <ul class="list-inline mb-0">
                         <li class="list-inline-item">
-                            <a href="https://www.facebook.com" style="color: rgb(255, 77, 0)" target="_blank">
+                            <a href="https://www.facebook.com" target="_blank">
                                 <i class="ti-facebook mr-3"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://twitter.com" style="color: rgb(255, 77, 0)" target="_blank"> 
+                            <a href="https://twitter.com" target="_blank"> 
                                 <i class="ti-twitter mr-3"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://github.com" style="color: rgb(255, 77, 0)" target="_blank">
+                            <a href="https://github.com" target="_blank">
                                 <i class="ti-github mr-3"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://www.pinterest.ca/" style="color: rgb(255, 77, 0)" target="_blank">
+                            <a href="https://www.pinterest.ca/" target="_blank">
                                 <i class="ti-pinterest mr-3 "></i>
                             </a>
                         </li>
