--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="/plugins/owl-carousel/owl.theme.default.min.css">
   <link rel="stylesheet" href="/plugins/magnific-popup/magnific-popup.css">
   <link rel="stylesheet" href="/plugins/animated-text/animated-text.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/style.css">
 
   <!-- Icon -->
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png">
