--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,7 +3,7 @@
   <!-- Signup Stylesheet -->
   <link rel="stylesheet" href="/css/signup-style.css">
 
-    <form action="/signup" method="post" id="signup-form" class="body-form">
+    <form id="signup-form" class="body-form">
         <div class="container">
             <h1 style="margin-bottom: 10%; margin-top: 10%;">Create an account</h1>
 
