--- a/views/login.ejs
+++ b/views/login.ejs
@@ -45,9 +45,10 @@
         const password = form.password.value;
 
         try {
-            const res = await fetch('/signup', {
+            const res = await fetch('/login', {
                 method: 'post',
                 body: JSON.stringify({ email, password }),
+                credentials: "include",
                 headers: {'Content-Type': 'application/json'}
             });
 
