Updated navbar (for guest, user and organizer)

--- a/views/eventView.ejs
+++ b/views/eventView.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') %>
 
-<%- include('partials/nav_bar_user') %>
+<%- include('partials/nav_bar') %>
 
 <main class="container">
     <h2>View Events</h2>
