--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') %>
 
-<%- include('partials/nav_bar_org') %>
+<%- include('partials/nav_bar') %>
 
 <div class="container">
     <img src="/images/banner.png" alt="Banner Image" class="img-fluid">
