--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -28,8 +28,8 @@
                 <label for="password">Password</label>
             </div>
             <div>
-                <input id="User-account" name="Kn" type="radio" required="required">I'm a user
-                <input id="Organizer-account" name="Kn" type="radio" required="required">I'm a Organizer
+                <input id="User-account" name="type" type="radio" required="required">I'm a user
+                <input id="Organizer-account" name="type" type="radio" required="required">I'm a Organizer
             </div>
 
             <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
