Login Redirect/ Fixes

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,9 +4,9 @@
 
 <main class="container my-5">
     <div class=" justify-content-md-center my-2">
-        <h1>Name: <%= userEmail %></h1>
+        <h1>Email: <%= userEmail %></h1>
         <h1>Type: <%= userType %></h1>
-        <h1>Fisrt Name: <%= userFirstName %></h1>
+        <h1>First Name: <%= userFirstName %></h1>
         <h1>Last Name: <%= userLastName %></h1>
     </div>
     
